[gd_scene load_steps=12 format=2]

[ext_resource path="res://Juego/Estacion Recarga/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/Enemigos/spaceStationA.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/Enemigos/spaceStationB.png" type="Texture" id=3]
[ext_resource path="res://Juego/Naves/Enemigos/spaceStationC.png" type="Texture" id=4]
[ext_resource path="res://Juego/Naves/Enemigos/spaceStationD.png" type="Texture" id=5]
[ext_resource path="res://Juego/Naves/Enemigos/EstacionEnemiga.png" type="Texture" id=6]
[ext_resource path="res://Juego/Naves/BaseEnemiga.gd" type="Script" id=7]
[ext_resource path="res://Juego/Naves/Enemigos/Impactado.ogg" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotacion_anti_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.247059 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotacion_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.247059 ), Color( 1, 1, 1, 0 ) ]
}

[node name="BaseEnemiga" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprites" type="Node2D" parent="."]

[node name="SpriteA" type="Sprite" parent="Sprites"]
position = Vector2( 143, -98 )
rotation = 3.14159
texture = ExtResource( 2 )

[node name="SpriteB" type="Sprite" parent="Sprites"]
texture = ExtResource( 3 )

[node name="SpriteC" type="Sprite" parent="Sprites"]
position = Vector2( 4, -265 )
texture = ExtResource( 4 )

[node name="SpriteD" type="Sprite" parent="Sprites"]
position = Vector2( 4, -218 )
texture = ExtResource( 5 )

[node name="AreaColision" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]
visible = false

[node name="SpriteZonaRecarga" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.247059 )
position = Vector2( 6, -45 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 1 )
anims/rotacion_anti_horario = SubResource( 2 )
anims/rotacion_horario = SubResource( 3 )

[node name="Impacto_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -10.4
bus = "SFX"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
